--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -954,7 +954,7 @@ Even though when matching on the proof of \m{QSDom A l} there are two possible c
 ]
 {Coq}{Snippets/Chapter2/BoveCapretta.v}
 
-Armed with both lemmas, we can now implement \m{qs'} -- the implementation is shown in the listing above. The first important point to notice is that the principal argument is \m{d\ :\ QSDom A l}, as can be seen from the annotation \m{\{struct d\}}, but we don't match on \m{d} -- the definition proceeds like for our initial \m{qs'} from section \ref{template}, when the termination checker was turned off.
+Armed with both lemmas, we can now implement \m{qs'} -- the implementation is shown in the listing above. The first important point to notice is that the principal argument is \m{d\ :\ QSDom A l}, as can be seen from the annotation \{\m{struct d}\}, but we don't match on \m{d} -- the definition proceeds like for our initial \m{qs'} from section \ref{template}, when the termination checker was turned off.
 
 The second important thing to notice is that, unlike previously, we don't just simply match on \m{short l} or use \m{let}s to pattern match on the results of \m{choosePivot} or \m{partition}. This time in each of these cases we have to use the full power of Coq's dependent pattern matching in order to generalize the return types. This is because we need to feed equations like \m{short l = Some (h, t)} into our inversion lemmas.
 
@@ -977,20 +977,30 @@ What changes drastically is the Haskell code extracted from \m{qs'}. Even though
 
 \section{Verificatio ex nihilo} \label{exnihilo}
 
-We are now ready to make the last step in our grand journey for formally verified quicksort: prove correctness of our template (and then, as a sanity check, of a default concrete implementation too).
+We are now ready to make the last step in our grand journey for formally verified algorithms: prove correctness of our template. Our approach to this task, outlined in the below technique, will be pretty similar to what we did when proving termination: we will assume all the properties and lemmas we need and put them together to get the correctness proof, leaving the concrete proofs  to the users of our algorithm. But as a conveniece for the users (and a sanity check for ourselves), we will provide a nice correctness proof for the default implementation.
 
-\concept{Prove your template correct ``by fiat'': find out what properties and lemmas are required for each step of the proof to go through and assume they are part of your template.}
+\begin{center}
+    \textbf{Formally verified algorithm concept/technique \#4} \\
+    Prove your template correct ``by fiat'': find out what properties and lemmas are required for each step of the proof to go through and assume they are part of your template.
+\end{center}
 
 \subsection{One induction to rule them all -- functional induction}
 
-Mention functional induction here and how to derive it.
+But before we make the last step of our journey, we have to ask ourselves: once we have all the lemmas we need, how exactly are we going to put them together? What will the outline of the proof look like? This question may seem trivial: we defined quicksort by recursion, so the proof will go by induction. But as everyone who has ever done a formal proof by induction knows, it's not that simple.
+
+If the recursion scheme of the function is different from the induction scheme in the induction principle used for the proof, problems may arise. For example, the standard induction principle for natural numbers, which is concerned only with $0$ and $n + 1$, is sometimes not sufficient for proofs about the Fibonacci numbers, which are defined by recursion by considering the cases of $0$, $1$ and $n + 2$.
+
+A tentative answer to this problem may be to use well-founded induction, just as we did for the termination proof. But again, as anybody who was ever done a proof by well-founded induction in Coq knows, this would be a bit messy and inconvenient. Because well-founded induction is so general it can be used for any function whatsoever, it doesn't fit any single recursion scheme particularly well and this produces some overhead.
+
+Fortunately, there is a relatively cheap ultimate solution of the problem of inductive proofs: functional induction. This is a form of induction in which we use a tailor-made induction principle that perfectly fits the function's recursion scheme to prove all properties of the function. Thanks to this technique the proofs become pretty easy\footnote{Problems may arise only when we compose the function in question with others -- in such a case even the functional induction principle may be not enough to guarantee a smooth proof without overhead.} and also easy to automate, and the derivation of the functional induction principle is very schematic and easy to automate itself.
+
 
 \inputminted
 [
     frame=lines,
     bgcolor=CoqIDE,
     firstline=106,
-    lastline=124
+    lastline=126
 ]
 {Coq}{Snippets/Chapter2/VerificatioExNihilo.v}
 
@@ -998,8 +1008,8 @@ Mention functional induction here and how to derive it.
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=126,
-    lastline=146
+    firstline=128,
+    lastline=148
 ]
 {Coq}{Snippets/Chapter2/VerificatioExNihilo.v}
 
@@ -1007,8 +1017,8 @@ Mention functional induction here and how to derive it.
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=148,
-    lastline=197
+    firstline=150,
+    lastline=199
 ]
 {Coq}{Snippets/Chapter2/VerificatioExNihilo.v}
 
