--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -992,18 +992,18 @@ If the recursion scheme of the function is different from the induction scheme i
 
 A tentative answer to this problem may be to use well-founded induction, just as we did for the termination proof. But again, as anybody who was ever done a proof by well-founded induction in Coq knows, this would be a bit messy and inconvenient. Because well-founded induction is so general that it can be used for any function whatsoever, it doesn't fit any single recursion scheme particularly well and this produces some overhead.
 
-Fortunately, there is a relatively cheap ultimate solution of the problem of inductive proofs: functional induction. This is a form of induction in which we use a tailor-made induction principle that perfectly fits the function's recursion scheme to prove all properties of the function. Thanks to this technique the proofs become pretty easy\footnote{Problems may arise only when we compose the function in question with others -- in such a case even the functional induction principle may be not enough to guarantee a smooth proof.} and also easy to automate, and the derivation of the functional induction principle is very schematic and easy to automate itself.
+Fortunately, there is a relatively cheap ultimate solution of the problem of inductive proofs: functional induction. This is a form of induction in which a tailor-made induction principle that perfectly fits the function's recursion scheme is used to prove all properties of the function. Thanks to this technique the proofs become pretty easy\footnote{Problems may arise only when we compose the function in question with others -- in such a case even the functional induction principle may be not enough to guarantee a smooth proof.} and also easy to automate, and the derivation of the functional induction principle is very schematic and easy to automate itself.
 
 \begin{center}
     \textbf{Formally verified algorithm concept/technique \#4.1} \\
-    Define an inductive relation that represents the graph of your algorithm, prove that it is correct and complete and use its induction principle to derive the functional induction principle of your algorithm.
+    Define an inductive relation that represents the graph of your algorithm, prove that it really is the graph and use its induction principle to derive the functional induction principle of your algorithm.
 \end{center}
 
 The above technique outlines how to derive the functional induction principle. The first step is to notice that there are two inductive families whose induction principles are almost what we're looking for: the inductive domain predicate and the inductive graph relation. We have already seen the former and should be adept at using it, but it turns our not to be what we are looking for -- we will see why in the next section. We are thus left with the latter.
 
-We say that a binary relation \m{R\ :\ A -> B -> Prop} is a graph of the function \m{f\ :\ A -> B} when \m{R a b <-> f a = b}. We called \m{R} ``a'' graph, but it can be proven that any function has exactly one graph, so we can just as well call it ``the'' graph. But even though all graphs of a given function are equivalent, they are not equivalently useful for our purposes, because the usefulness of their intensional characteristics can vary.
+We say that a binary relation \m{R\ :\ A -> B -> Prop} is a graph of the function \m{f\ :\ A -> B} when \m{R a b <-> f a = b}. We called \m{R} ``a'' graph, but it can be proven that any function has exactly one graph, so we can just as well call it ``the'' graph. But even though all graphs of a given function are equivalent, they are not equivalently useful for our purposes, because the usefulness of their intensional characteristics may vary.
 
-For example, we can define the graph of the function \m{div2}, which divides a natural number by two (rounding down if the number is odd), in two extensionally equivalent ways, either by saying that \m{R a b := a = 2 * b $\lor$ a = 1 + 2 * b} or with an inductive definition that closely follows the recursive definition of \m{div2}. Only the latter, inductively defined graph relation is useful for deriving the functional induction principle. 
+For example, we can define the graph of the function \m{div2}\footnote{\m{div2} divides a natural number by two, rounding down if the argument is odd.} in two extensionally equivalent ways, either by saying that \m{R a b := a = 2 * b $\lor$ a = 1 + 2 * b} or with an inductive definition that closely follows the recursive definition of \m{div2}. Only the latter, inductively defined graph relation is useful for deriving the functional induction principle. 
 
 \inputminted
 [
@@ -1014,32 +1014,52 @@ For example, we can define the graph of the function \m{div2}, which divides a n
 ]
 {Coq}{Snippets/Chapter2/VerificatioExNihilo.v}
 
-\inputminted
-[
-    frame=lines,
-    bgcolor=CoqIDE,
-    firstline=128,
-    lastline=148
-]
-{Coq}{Snippets/Chapter2/VerificatioExNihilo.v}
+The inductive graph relation for our quicksort template is shown in the listing above. It is very similar to the definition of \m{QSDom} and also closely matches our original definition of \m{qs} from section \ref{template}. The parameter \m{A} and the first index of type \m{list A} represent quicksort's arguments, whereas the second index of type \m{list A} represents its result. In the constructor \m{LongG}, the inductives occurrences of \m{QSGraph} mimic the recursive calls.
 
 \inputminted
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=150,
-    lastline=199
+    firstline=123,
+    lastline=129
 ]
 {Coq}{Snippets/Chapter2/VerificatioExNihilo.v}
+
+The next step is to prove that \m{QSGraph} is ``correct'' with respect to \m{qs}. In less jargony words, this corresponds to one of the implications from the definition of a function's graph, namely \m{f a = b -> R a b}. The statement of the lemma is a bit different, however: it is the equivalent of saying \m{R a (f a)} instead.
+
+The proof is easy: we introduce assumptions to context, unfold the definition of \m{qs} and generalize the termination proof \m{QSDom\_all A l} to a general \m{q\ :\ QSDom A l}. The rest is a simple induction on \m{q}, followed by using the appropriate constructor and feeding it with the arguments it wants.
 
 \inputminted
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=199,
-    lastline=275
+    firstline=131,
+    lastline=157
 ]
 {Coq}{Snippets/Chapter2/VerificatioExNihilo.v}
+
+We proceed to proving that \m{QSGraph} is ``complete'' with respect to \m{qs}. This is the other implication from the definition of a function's graph, namely \m{R a b -> f a = b}. But if we tried to prove it directly, it would turn out to be very hard -- we would have to reason about \m{qs}, but we haven't derived the functional induction principle yet! Luckily, there is a very easy way to get this done: since we already know that \m{QSGraph} is correct, it suffices to prove that it is also deterministic, i.e. that \m{R a b1 -> R a b2 -> b1 = b2}. If we combine correctness with being deterministic, we get completeness.
+
+The proof of \m{QSGraph\_det} is as follows: given \m{r1} and \m{r2}, two potential results for \m{l}, and the corresponding derivations \m{QSGraph A l r1} and \m{QSGraph A l r2}, we proceed by induction on the first derivation, generalizing the other assumptions as necessary to get the most general induction hypothesis, and then we invert the second derivation.
+
+In case both derivations are of the form \m{ShortG} the proof is trivial. In case they were derived using different constructors, it's an easy contradiction. The last case, when both were constructed using \m{LongG}, is just as easy, but a bit more involved -- we have to perform various rewritings and inversions to convince Coq that using the inductive hypotheses is OK.
+
+With the lemma at hand, proving completeness is trivial: first we use the lemma \m{QSGraph\_det} and then in one case we use an assumption, whereas in the other we use the correctness lemma.
+
+\inputminted
+[
+    frame=lines,
+    bgcolor=CoqIDE,
+    firstline=159,
+    lastline=180
+]
+{Coq}{Snippets/Chapter2/VerificatioExNihilo.v}
+
+At last we can formulate the functional induction principle and prove it. The principle looks similar to the induction principle \m{QSGraph\_ind} that Coq generated automatically for \m{QSGraph}. The differences are that we assume the induction hypothesis holds for \m{P lt (qs A lt)} and \m{P gt (qs A gt)} instead of \m{lt'} and \m{gt'} coming from derivations of \m{QSGraph A lt lt'} and \m{QSGraph A gt gt'}. Another difference is that there is no mention of \m{QSGraph} in the conclusion.
+
+The proof is straightforward. We introduce assumptions to context and apply the induction principle of \m{QSGraph}. In the first case we use an assumption. In the second case
+
+
 
 \subsection{Automating the boring stuff}
 
